# bespotender-

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  DEEP_AUDIT_REPORT.md  INTEGRATION_PLAN.md  README.md  STANDARDIZATION_PLAN.md  get_errors.py  pyproject.toml  read_telegram_bot.py  repair_dashboard.py  sample.html  tenderdesc.html  update_schema.py  update_schema_days.py
.claude/rules/: python-coding-style.md  python-hooks.md  python-patterns.md  python-security.md  python-testing.md  web-coding-style.md  web-design-quality.md  web-hooks.md  web-patterns.md  web-performance.md  (+2 more)
deprecated_archive/: add_proposal_documents_v2.py  apply_new_key.py  apply_sms_key.py  brute_force_sms.py  clean_and_fix.py  enhance_go_no_go.py  final_dashboard_fix.py  finalize_tender_layout.py  finalize_tender_layout_v2.py  fix_blank_workspace.py  fix_blank_workspace_v2.py  fix_bond_percent_logic.py  fix_final_integration.py  fix_form_sequence.py  fix_global_sms.py  fix_permissions.py  fix_purchase_status.py  fix_sms_button.py  fix_sms_final.py  force_dashboard.py  force_install_sms.py  force_tabs_visible.py  generate_chart_data.py  generate_chart_data_final.py  generate_chart_data_v2.py  generate_chart_data_v3.py  hard_reset_dashboard.py  install_bidhive_features.py  reset_tender_layout_v2.py  restore_tabs_and_sequence.py  restructure_tender_form_v2.py  resurrect_identification.py  scrub_tender_layout.py  setup_approvals.py  setup_bond_calculator.py  setup_complete_system.py  setup_dashboard.py  setup_dashboard_v2.py  setup_dashboard_v7.py  setup_final_touches_v2.py  (+15 more)
tender_management/: BESPO_TENDER_FORMS_COMPLETE.md  DETAILED_FEATURES.md  DOCUMENT_TEMPLATES.md  FEATURE_FORMS_SPEC.md  FEATURE_README.md  SAMPLE_TEMPLATES.md  get_errors_v2.py  hooks.py  install_dependencies.sh  patches.txt  read_telegram_bot.py
(+223 files in other folders)
